--- a/src/main/resources/sharding.yml
+++ b/src/main/resources/sharding.yml
@@ -16,10 +16,49 @@ dataSources:
 
 rules:
   - !SHARDING
-
+    defaultDatabaseStrategy:
+      standard:
+        shardingColumn: id
+        shardingAlgorithmName: db-inline
     tables:
       user:
         actualDataNodes: shardwallet${1..2}.user
+        databaseStrategy:
+          standard:
+            shardingColumn: id
+            shardingAlgorithmName: db-inline
+        keyGenerateStrategy:
+          column: id
+          keyGeneratorName: snowflakestrategy
+      wallet:
+        actualDataNodes: shardwallet${1..2}.wallet
+        databaseStrategy:
+          standard:
+            shardingColumn: user_id
+            shardingAlgorithmName: db-inline-user-id
+        keyGenerateStrategy:
+          column: id
+          keyGeneratorName: snowflakestrategy
+      transaction:
+        actualDataNodes: shardwallet${1..2}.transaction
+        databaseStrategy:
+          standard:
+            shardingColumn: id
+            shardingAlgorithmName: db-inline
+        keyGenerateStrategy:
+          column: id
+          keyGeneratorName: snowflakestrategy
+      saga_instance:
+        actualDataNodes: shardwallet${1..2}.saga_instance
+        databaseStrategy:
+          standard:
+            shardingColumn: id
+            shardingAlgorithmName: db-inline
+        keyGenerateStrategy:
+          column: id
+          keyGeneratorName: snowflakestrategy
+      saga_step:
+        actualDataNodes: shardwallet${1..2}.saga_step
         databaseStrategy:
           standard:
             shardingColumn: id
@@ -33,6 +72,10 @@ rules:
         type: INLINE
         props:
           algorithm-expression: shardwallet${id % 2 + 1}
+      db-inline-user-id:
+        type: INLINE
+        props:
+          algorithm-expression: shardwallet${user_id % 2 + 1}
 
     keyGenerators:
       snowflakestrategy:
